events and project changes

--- a/single.html
+++ b/single.html
@@ -119,7 +119,7 @@
                 <div class="row">
                     <div class="col-lg-8">
                         <div class="single-content">
-                            <img src="img/single.jpg" />
+                            <img src="img/akshar2.jpg" />
                             <h2>Project Akshar</h2>
                             <p>
                                 " A simple but powerful reminder of the positive domino effect a good education can have on many aspects of a person's life and outlook."
@@ -128,15 +128,13 @@
                             </p>
                             <h3>What the Project is about?</h3>
                             <p>
-                                Project Akshar  works with the motive of enabling a brighter future for children from low-income communities by providing them with desired knowledge to achieve their true potential and acquire enough competence for next project, Project Pathshala.
-                                A continuous effort has been made throughout the year by regular learning sessions in different demarcated centers.
-                                The overwhelming progress of 400 children have benifitted from Project Akshar and the numbers are still increasing.
+                                This project was begun back in 2014 with an aim to provide quality education to underprivileged societies. This project beliefs nurturing and shaping minds of children.  Under this project, the children are provided with learning sessions on daily basis from Monday to Friday by our volunteers at our centres. Project Akshar has been able to full filled a brighter future for more than four hundred children far. 
                                 
                             </p>
                             <h3>How it Started?</h3>
                             <p>
                                 “Education is what survives when what has been learned has been forgotten.” <br>
-                                • Initiation: Project Akshar was started in 2015, as the first and foremost segment of the initiative for imparting education to the children of weaker section of society.
+                                • Initiation: Project Akshar was started in 2014, as the first and foremost segment of the initiative for imparting education to the children of weaker section of society.
                                 
                             </p>
                             <h3>How it Works?</h3>
