--- a/single1.html
+++ b/single1.html
@@ -122,7 +122,7 @@
             <div class="row">
                 <div class="col-lg-8">
                     <div class="single-content">
-                        <img src="img/single1.jpg" />
+                        <img src="img/aavishkar.jpg" />
                         <h2>Project Anand</h2>
                         <p>
                             The word “aanand” directly translates to “joy”. And going by a famous quote by Joseph
@@ -132,9 +132,7 @@
 
                         <h3>What the project is about?</h3>
                         <p>
-                            Project Aanand aims to cater this very choice of leading a joyful life to those who are
-                            deprived of it. Under this project, the process of education is presented to the students in
-                            a rather interesting, exciting, and fun way by various means.
+                            This project was begun back in 2014 with an aim to provide quality education to underprivileged societies. This project beliefs nurturing and shaping minds of children.  Under this project, the children are provided with learning sessions on daily basis from Monday to Friday by our volunteers at our centres. Project Akshar has been able to full filled a brighter future for more than four hundred children far. 
 
                         </p>
                         <p>
