--- a/single3.html
+++ b/single3.html
@@ -128,7 +128,7 @@
                            
                             <h3>What is it about?</h3>
                             <p>
-                                Gleeful giggles fill the air as children adorned in new clothes dance in jubilation. And, those stationary kits ignite their minds with sparks of curiosity and imagination!
+                                 This project aims to provide essential resources to the underprivileged children as per the requirements. These resources range from providing nutrition rich food items to medicines, from clothes to sanitary napkins. Stationary kits are also distributed among the students. More than 400 children have benefited from this project till now.
 
                             </p>
                             <h3>How it Started?</h3>
