pics converted to webp format

--- a/team.html
+++ b/team.html
@@ -55,8 +55,18 @@
     <div class="navbar navbar-expand-lg bg-dark navbar-dark">
         <div class="container-fluid">
             <a href="index.html">
-                <img class="logoimg" src="images/aarohalogofin.png">
-                <img class="logoimgtext" src="img/logotext.png">                
+                <picture>
+                    <source srcset="images/aarohalogofin.webp" type="image/webp">
+                    <img class="logoimg" src="images/aarohalogofin.png" alt="Aaroha Logo">
+
+                </picture>
+
+                <picture>
+
+                    <source srcset="images/logotext.webp" type="image/webp">
+                    <img class="logoimgtext" src="img/logotext.png" alt="Logo Text">
+
+                </picture>               
             </a><!-- <a href="index.html" class="navbar-brand"> आरोह</a> -->
             <button type="button" class="navbar-toggler" data-toggle="collapse" data-target="#navbarCollapse">
                 <span class="navbar-toggler-icon"></span>
@@ -124,7 +134,10 @@
                     <div class="col-lg-3 col-md-6">
                         <div class="team-item">
                             <div class="team-img">
-                                <img src="teamimgs/president.jpg" alt="Team Image">
+                                <picture>
+                                    <source srcset="teamimgs/president.webp" type="image/webp">
+                                    <img src="teamimgs/president.jpg" alt="Team Image">
+                                </picture>
                             </div>
                             <div class="team-text">
                                 <h2>Shreenivas</h2>
@@ -143,7 +156,10 @@
                     <div class="col-lg-3 col-md-6">
                         <div class="team-item">
                             <div class="team-img">
-                                <img src="teamimgs/vicepresident.jpg" alt="Team Image">
+                                <picture>
+                                    <source srcset="teamimgs/vicepresident.webp" type="image/webp">
+                                    <img src="teamimgs/vicepresident.jpg" alt="Team Image">
+                                </picture>
                             </div>
                             <div class="team-text">
                                 <h2>Ashish Sharma</h2>
@@ -160,7 +176,10 @@
                     <div class="col-lg-3 col-md-6">
                         <div class="team-item">
                             <div class="team-img">
-                                <img src="teamimgs/projectmanager.jpg" alt="Team Image">
+                                <picture>
+                                    <source srcset="teamimgs/projectmanager.webp" type="image/webp">
+                                    <img src="teamimgs/projectmanager.jpg" alt="Team Image">
+                                </picture>
                             </div>
                             <div class="team-text">
                                 <h2>Triveni Naidu</h2>
@@ -177,7 +196,10 @@
                     <div class="col-lg-3 col-md-6">
                         <div class="team-item">
                             <div class="team-img">
-                                <img src="teamimgs/humanlead.jpg" alt="Team Image">
+                                <picture>
+                                    <source srcset="teamimgs/humanlead.webp" type="image/webp">
+                                    <img src="teamimgs/humanlead.jpg" alt="Team Image">
+                                </picture>
                             </div>
                             <div class="team-text">
                                 <h2>Satvik Sharma</h2>
@@ -194,7 +216,10 @@
                     <div class="col-lg-3 col-md-6">
                         <div class="team-item">
                             <div class="team-img">
-                                <img src="teamimgs/financemanager.jpg" alt="Team Image">
+                                <picture>
+                                    <source srcset="teamimgs/financemanager.webp" type="image/webp">
+                                    <img src="teamimgs/financemanager.jpg" alt="Team Image">
+                                </picture>
                             </div>
                             <div class="team-text">
                                 <h2>Surbhi Gaharwar</h2>
@@ -211,7 +236,10 @@
                     <div class="col-lg-3 col-md-6">
                         <div class="team-item">
                             <div class="team-img">
-                                <img src="teamimgs/chaptercoordinator.jpg" alt="Team Image">
+                                <picture>
+                                    <source srcset="teamimgs/chaptercoordinator.webp" type="image/webp">
+                                    <img src="teamimgs/chaptercoordinator.jpg" alt="Team Image">
+                                </picture>
                             </div>
                             <div class="team-text">
                                 <h2>Satyam Vada</h2>
@@ -228,7 +256,10 @@
                     <div class="col-lg-3 col-md-6">
                         <div class="team-item">
                             <div class="team-img">
-                                <img src="teamimgs/designlead.jpg" alt="Team Image">
+                                <picture>
+                                    <source srcset="teamimgs/designlead.webp" type="image/webp">
+                                    <img src="teamimgs/designlead.jpg" alt="Team Image">
+                                </picture>
                             </div>
                             <div class="team-text">
                                 <h2>Shruti Saksena</h2>
@@ -272,7 +303,10 @@
                     <div class="col-lg-3 col-md-6">
                         <div class="team-item">
                             <div class="team-img">
-                                <img src="images/aimmslead.jpg" alt="Team Image">
+                                <picture>
+                                    <source srcset="images/aimmslead.webp" type="image/webp">
+                                    <img src="images/aimmslead.jpg" alt="Team Image">
+                                </picture>
                             </div>
                             <div class="team-text">
                                 <h2>Simaran</h2>
@@ -289,7 +323,10 @@
                     <div class="col-lg-3 col-md-6">
                         <div class="team-item">
                             <div class="team-img">
-                                <img src="images/manitlead.jpg" alt="Team Image">
+                                <picture>
+                                    <source srcset="images/manitlead.webp" type="image/webp">
+                                    <img src="images/manitlead.jpg" alt="Team Image">
+                                </picture>
                             </div>
                             <div class="team-text">
                                 <h2>Kshitij Raj</h2>
@@ -306,7 +343,10 @@
                     <div class="col-lg-3 col-md-6">
                         <div class="team-item">
                             <div class="team-img">
-                                <img src="images/ihmlead.jpg" alt="Team Image">
+                                <picture>
+                                    <source srcset="images/ihmlead.webp" type="image/webp">
+                                    <img src="images/ihmlead.jpg" alt="Team Image">
+                                </picture>
                             </div>
                             <div class="team-text">
                                 <h2>Khusi Shrivastav</h2>
