--- a/causes.html
+++ b/causes.html
@@ -55,8 +55,14 @@
     <div class="navbar navbar-expand-lg bg-dark navbar-dark">
         <div class="container-fluid">
             <a href="index.html">
-                <img class="logoimg" src="images/aarohalogofin.png">
-                <img class="logoimgtext" src="img/logotext.png">                
+                <picture>
+                    <source srcset="images/aarohalogofin.webp" type="image/webp">
+                    <img class="logoimg" src="images/aarohalogofin.png" alt="Aaroha Logo">
+                </picture>
+                <picture>
+                    <source srcset="images/logotext.webp" type="image/webp">
+                    <img class="logoimgtext" src="img/logotext.png" alt="Logo Text">
+                </picture>
             </a><!-- <a href="index.html" class="navbar-brand"> आरोह</a> -->
             <button type="button" class="navbar-toggler" data-toggle="collapse" data-target="#navbarCollapse">
                 <span class="navbar-toggler-icon"></span>
@@ -194,7 +200,10 @@
                 <div class="owl-carousel causes-carousel">
                     <div class="causes-item">
                         <div class="causes-img">
-                            <img src="images\_MG_6221.JPG" alt="Image">
+                            <picture>
+                                <source srcset="images\_MG_6221.webp" type="image/webp">
+                                <img src="images\_MG_6221.JPG" alt="Image">
+                            </picture>
                         </div>
                         <div class="causes-progress">
                             <div class="progress">
