--- a/contact.html
+++ b/contact.html
@@ -55,8 +55,14 @@
         <div class="navbar navbar-expand-lg bg-dark navbar-dark">
             <div class="container-fluid">
                 <a href="index.html">
-                    <img class="logoimg" src="images/aarohalogofin.png">
-                    <img class="logoimgtext" src="img/logotext.png">                
+                    <picture>
+                        <source srcset="images/aarohalogofin.webp" type="image/webp">
+                        <img class="logoimg" src="images/aarohalogofin.png" alt="Logo">
+                    </picture>
+                    <picture>
+                        <source srcset="images/logotext.webp" type="image/webp">
+                        <img class="logoimgtext" src="img/logotext.png" alt="Logo Text">
+                    </picture>              
                 </a><!-- <a href="index.html" class="navbar-brand"> आरोह</a> -->
                 <button type="button" class="navbar-toggler" data-toggle="collapse" data-target="#navbarCollapse">
                     <span class="navbar-toggler-icon"></span>
@@ -121,7 +127,10 @@
                     <h2>Contact for any query</h2>
                 </div>
                 <div class="contact-img">
-                    <img src="img/contact.jpg" alt="Image">
+                    <picture>
+                        <source srcset="images/contact.webp" type="image/webp">
+                        <img src="img/contact.jpg" alt="Image">
+                    </picture>
                 </div>
                 <div class="contact-form">
                         <div id="success"></div>
