--- a/event.html
+++ b/event.html
@@ -58,8 +58,14 @@
         <div class="navbar navbar-expand-lg bg-dark navbar-dark">
             <div class="container-fluid">
                 <a href="index.html">
-                    <img class="logoimg" src="images/aarohalogofin.png">
-                    <img class="logoimgtext" src="img/logotext.png">                
+                    <picture>
+                        <source srcset="images/aarohalogofin.webp" type="image/webp">
+                        <img class="logoimg" src="images/aarohalogofin.png" alt="Logo">
+                    </picture>
+                    <picture>
+                        <source srcset="images/logotext.webp" type="image/webp">
+                        <img class="logoimgtext" src="img/logotext.png" alt="Logo Text">
+                    </picture>           
                 </a><!-- <a href="index.html" class="navbar-brand"> आरोह</a> -->
                 <button type="button" class="navbar-toggler" data-toggle="collapse" data-target="#navbarCollapse">
                     <span class="navbar-toggler-icon"></span>
@@ -126,7 +132,10 @@
                 <div class="row">
                     <div class="col-lg-6">
                         <div class="event-item">
-                            <img src="img/event-1.jpg" alt="Image">
+                            <picture>
+                                <source srcset="images/event-1.webp" type="image/webp">
+                                <img src="img/event-1.jpg" alt="Image">
+                            </picture>
                             <div class="event-content">
                                 <!-- <div class="event-meta">
                                     <p><i class="fa fa-calendar-alt"></i>Every Week</p>
@@ -145,7 +154,10 @@ Mission: Aaroha envisions ‘A se Ah’ as a means to dispel the sense of inadeq
                     </div>
                     <div class="col-lg-6">
                         <div class="event-item">
-                            <img src="img/aakar.jpg" alt="Image">
+                            <picture>
+                                <source srcset="images/aakar.webp" type="image/webp">
+                                <img src="img/aakar.jpg" alt="Image">
+                            </picture>
                             <div class="event-content">
                                 <!-- <div class="event-meta">
                                     <p><i class="fa fa-calendar-alt"></i>01-Jan-45</p>
@@ -166,7 +178,10 @@ Mission: Aaroha envisions ‘A se Ah’ as a means to dispel the sense of inadeq
                     </div>
                     <div class="col-lg-6">
                         <div class="event-item">
-                            <img src="img/avishkar.jpg" alt="Image">
+                            <picture>
+                                <source srcset="images/aavishkar.webp" type="image/webp">
+                                <img src="img/aavishkar.jpg" alt="Image">
+                            </picture>
                             <div class="event-content">
                                 <!-- <div class="event-meta">
                                     <p><i class="fa fa-calendar-alt"></i>01-Jan-45</p>
@@ -188,7 +203,10 @@ Mission: Aaroha envisions ‘A se Ah’ as a means to dispel the sense of inadeq
                    
                     <div class="col-lg-6">
                         <div class="event-item">
-                            <img src="img/fund raising.jpg" alt="Image">
+                            <picture>
+                                <source srcset="images/fund raising.webp" type="image/webp">
+                                <img src="img/fund raising.jpg" alt="Image">
+                            </picture>
                             <div class="event-content">
                                 <!-- <div class="event-meta">
                                     <p><i class="fa fa-calendar-alt"></i>Every Week</p>
@@ -211,7 +229,10 @@ The mission of these fundraising events is to expand the reach and impact of Aar
                     </div>
                     <div class="col-lg-6">
                         <div class="event-item">
-                            <img src="img/aasha.jpg" alt="Image">
+                            <picture>
+                                <source srcset="images/aasha.webp" type="image/webp">
+                                <img src="img/aasha.jpg" alt="Image">
+                            </picture>
                             <div class="event-content">
                                 <!-- <div class="event-meta">
                                     <p><i class="fa fa-calendar-alt"></i>Every Week</p>
@@ -234,7 +255,10 @@ The mission of these fundraising events is to expand the reach and impact of Aar
                     </div>
                     <div class="col-lg-6">
                         <div class="event-item">
-                            <img src="img/unmilnam.jpg" alt="Image">
+                            <picture>
+                                <source srcset="images/unmilnam.webp" type="image/webp">
+                                <img src="img/unmilnam.jpg" alt="Image">
+                            </picture>
                             <div class="event-content">
                                 <!-- <div class="event-meta">
                                     <p><i class="fa fa-calendar-alt"></i>Every Week</p>
@@ -257,7 +281,10 @@ The mission of these fundraising events is to expand the reach and impact of Aar
                     </div>
                     <div class="col-lg-6">
                         <div class="event-item">
-                            <img src="img/alankaran.jpg" alt="Image">
+                            <picture>
+                                <source srcset="images/alankaran.webp" type="image/webp">
+                                <img src="img/alankaran.jpg" alt="Image">
+                            </picture>
                             <div class="event-content">
                                 <!-- <div class="event-meta">
                                     <p><i class="fa fa-calendar-alt"></i>01-Jan-45</p>
