--- a/index.html
+++ b/index.html
@@ -56,8 +56,14 @@
         <div class="navbar navbar-expand-lg bg-dark navbar-dark">
             <div class="container-fluid">
                 <!-- <a href="index.html"> -->
-                    <img class="logoimg" src="images/aarohalogofin.png">
-                    <img class="logoimgtext" src="img/logotext.png">                
+                    <picture>
+                        <source type="image/webp" srcset="images/aarohalogofin.webp">
+                        <img class="logoimg" src="images/aarohalogofin.png" alt="Aaroha Logo">
+                    </picture>
+                    <picture>
+                        <source type="image/webp" srcset="images/logotext.webp">
+                        <img class="logoimgtext" src="img/logotext.png">                
+                    </picture>
                 <!-- </a> -->
                 <!-- <a href="index.html" class="navbar-brand"> आरोह</a> -->
                 <button type="button" class="navbar-toggler" data-toggle="collapse" data-target="#navbarCollapse">
@@ -104,7 +110,10 @@
                 <div class="owl-carousel">
                     <div class="carousel-item">
                         <div class="carousel-img">
-                            <img src="images/DVP_0181.JPG" alt="Image">
+                            <picture>
+                                <source type="image/webp" srcset="images/DVP_0181.webp">
+                                <img src="images/DVP_0181.png" alt="Image">
+                            </picture>
                         </div>
                         <div class="carousel-text">
                             <h1>Let's be kind for children</h1>
@@ -117,7 +126,10 @@
                     </div>
                     <div class="carousel-item">
                         <div class="carousel-img">
-                            <img src="images/IMG_5874.JPG" alt="Image">
+                            <picture>
+                                <source type="image/webp" srcset="images/IMG_5874.webp">
+                                <img src="images/IMG_5874.JPG" alt="Image">
+                            </picture>
                         </div>
                         <div class="carousel-text">
                             <h1>Get Involved with helping hand</h1>
@@ -130,7 +142,10 @@
                     </div>
                     <div class="carousel-item">
                         <div class="carousel-img">
-                            <img src="images/_MG_5953.JPG" alt="Image">
+                            <picture>
+                                <source type="image/webp" srcset="images/_MG_5953.webp">
+                                <img src="images/_MG_5953.JPG" alt="Image">
+                            </picture>
                         </div>
                         <div class="carousel-text">
                             <h1>Bringing smiles to thousands</h1>
@@ -335,7 +350,10 @@ Apart from education, Aaroha also works towards improving the health and wellbei
                 <div class="owl-carousel causes-carousel">
                     <div class="causes-item">
                         <div class="causes-img">
-                            <img src="images/_MG_6221.JPG" alt="Image">
+                            <picture>
+                                <source srcset="images/_MG_6221.webp" type="image/webp">
+                                <img src="images/_MG_6221.JPG" alt="Image">
+                            </picture>
                         </div>
                         <div class="causes-progress">
                             <div class="progress">
@@ -356,7 +374,10 @@ Apart from education, Aaroha also works towards improving the health and wellbei
                     </div>
                     <div class="causes-item">
                         <div class="causes-img">
-                            <img src="images/_MG_5953.JPG" alt="Image">
+                            <picture>
+                                <source type="image/webp" srcset="images/_MG_5953.webp">
+                                <img src="images/_MG_5953.JPG" alt="Image">
+                            </picture>
                         </div>
                         <div class="causes-progress">
                             <div class="progress">
@@ -379,7 +400,10 @@ Apart from education, Aaroha also works towards improving the health and wellbei
                     </div>
                     <div class="causes-item">
                         <div class="causes-img">
-                            <img src="images/_MG_6303.JPG" alt="Image">
+                            <picture>
+                                <source type="image/webp" srcset="images/_MG_6303.webp">
+                                <img src="images/_MG_6303.JPG" alt="Image">
+                            </picture>
                         </div>
                         <div class="causes-progress">
                             <div class="progress">
@@ -404,7 +428,10 @@ Apart from education, Aaroha also works towards improving the health and wellbei
                     </div>
                     <div class="causes-item">
                         <div class="causes-img">
-                            <img src="images/DVP_0843.JPG" alt="Image">
+                            <picture>
+                                <source type="image/webp" srcset="images/DVP_0843.webp">
+                                <img src="images/DVP_0843.JPG" alt="Image">
+                            </picture>
                         </div>
                         <div class="causes-progress">
                             <div class="progress">
@@ -490,7 +517,10 @@ Apart from education, Aaroha also works towards improving the health and wellbei
                     <h2>Contact for any query</h2>
                 </div>
                 <div class="contact-img">
-                    <img src="images/DSC_0086.JPG" alt="Image">
+                    <picture>
+                        <source type="image/webp" srcset="images/DSC_0086.webp">
+                        <img src="images/DSC_0086.JPG" alt="Image">
+                    </picture>
                 </div>
                 <div class="contact-form">
                         <div id="success"></div>
