--- a/single.html
+++ b/single.html
@@ -55,8 +55,18 @@
     <div class="navbar navbar-expand-lg bg-dark navbar-dark">
         <div class="container-fluid">
             <a href="index.html">
-                <img class="logoimg" src="images/aarohalogofin.png">
-                <img class="logoimgtext" src="img/logotext.png">                
+                <picture>
+                    <source srcset="images/aarohalogofin.webp" type="image/webp">
+                    <img class="logoimg" src="images/aarohalogofin.png" alt="Aaroha Logo">
+
+                </picture>
+
+                <picture>
+
+                    <source srcset="images/logotext.webp" type="image/webp">
+                    <img class="logoimgtext" src="img/logotext.png" alt="Logo Text">
+
+                </picture>
             </a><!-- <a href="index.html" class="navbar-brand"> आरोह</a> -->
             <button type="button" class="navbar-toggler" data-toggle="collapse" data-target="#navbarCollapse">
                 <span class="navbar-toggler-icon"></span>
@@ -119,7 +129,10 @@
                 <div class="row">
                     <div class="col-lg-8">
                         <div class="single-content">
-                            <img src="img/akshar2.jpg" />
+                            <picture>
+                                <source srcset="img/akshar2.webp" type="image/webp">
+                                <img src="img/akshar2.jpg" />
+                            </picture>
                             <h2>Project Akshar</h2>
                             <p>
                                 " A simple but powerful reminder of the positive domino effect a good education can have on many aspects of a person's life and outlook."
