--- a/single1.html
+++ b/single1.html
@@ -58,8 +58,18 @@
     <div class="navbar navbar-expand-lg bg-dark navbar-dark">
         <div class="container-fluid">
             <a href="index.html">
-                <img class="logoimg" src="images/aarohalogofin.png">
-                <img class="logoimgtext" src="img/logotext.png">                
+                <picture>
+                    <source srcset="images/aarohalogofin.webp" type="image/webp">
+                    <img class="logoimg" src="images/aarohalogofin.png" alt="Aaroha Logo">
+
+                </picture>
+
+                <picture>
+
+                    <source srcset="images/logotext.webp" type="image/webp">
+                    <img class="logoimgtext" src="img/logotext.png" alt="Logo Text">
+
+                </picture>                
             </a><!-- <a href="index.html" class="navbar-brand"> आरोह</a> -->
             <button type="button" class="navbar-toggler" data-toggle="collapse" data-target="#navbarCollapse">
                 <span class="navbar-toggler-icon"></span>
@@ -122,7 +132,10 @@
             <div class="row">
                 <div class="col-lg-8">
                     <div class="single-content">
-                        <img src="img/aavishkar.jpg" />
+                        <picture>
+                            <source srcset="img/aavishkar.webp" type="image/webp">
+                            <img src="img/aavishkar.jpg" />
+                        </picture>
                         <h2>Project Anand</h2>
                         <p>
                             The word “aanand” directly translates to “joy”. And going by a famous quote by Joseph
