removed unnecessary jpg and pngs

--- a/contact.html
+++ b/contact.html
@@ -55,14 +55,8 @@
         <div class="navbar navbar-expand-lg bg-dark navbar-dark">
             <div class="container-fluid">
                 <a href="index.html">
-                    <picture>
-                        <source srcset="images/aarohalogofin.webp" type="image/webp">
-                        <img class="logoimg" src="images/aarohalogofin.png" alt="Logo">
-                    </picture>
-                    <picture>
-                        <source srcset="images/logotext.webp" type="image/webp">
-                        <img class="logoimgtext" src="img/logotext.png" alt="Logo Text">
-                    </picture>              
+                    <img class="logoimg" src="images/aarohalogofin.webp" alt="Logo">
+                    <img class="logoimgtext" src="images/logotext.webp" alt="Logo Text">
                 </a><!-- <a href="index.html" class="navbar-brand"> आरोह</a> -->
                 <button type="button" class="navbar-toggler" data-toggle="collapse" data-target="#navbarCollapse">
                     <span class="navbar-toggler-icon"></span>
@@ -127,10 +121,7 @@
                     <h2>Contact for any query</h2>
                 </div>
                 <div class="contact-img">
-                    <picture>
-                        <source srcset="images/contact.webp" type="image/webp">
-                        <img src="img/contact.jpg" alt="Image">
-                    </picture>
+                    <img src="images/contact.webp" alt="Image">
                 </div>
                 <div class="contact-form">
                         <div id="success"></div>
