--- a/volunteer.html
+++ b/volunteer.html
@@ -59,12 +59,8 @@
         <div class="navbar navbar-expand-lg bg-dark navbar-dark">
             <div class="container-fluid">
                 <!-- <a href="index.html" class="navbar-brand">Helpz</a> -->
-                <picture>
+                <img class="logoimgtext" src="images/logotext.webp" alt="Logo Text">
 
-                    <source srcset="images/logotext.webp" type="image/webp">
-                    <img class="logoimgtext" src="img/logotext.png" alt="Logo Text">
-
-                </picture>
                 <button type="button" class="navbar-toggler" data-toggle="collapse" data-target="#navbarCollapse">
                     <span class="navbar-toggler-icon"></span>
                 </button>
@@ -113,7 +109,7 @@
         
         <!-- Volunteer Start -->
         <div class="container">
-            <div class="volunteer" data-parallax="scroll" data-image-src="images\DVP_0548.jpg">
+            <div class="volunteer" data-parallax="scroll" data-image-src="images\DVP_0548.webp">
                 <div class="row align-items-center">
                     <div class="col-lg-5">
                         <div class="volunteer-form">
