--- a/about.html
+++ b/about.html
@@ -55,14 +55,8 @@
     <div class="navbar navbar-expand-lg bg-dark navbar-dark">
         <div class="container-fluid">
             <a href="index.html">
-                <picture>
-                    <source srcset="images/aarohalogofin.webp" type="image/webp">
-                    <img class="logoimg" src="images/aarohalogofin.png" alt="Aaroha Logo">
-                </picture>
-                <picture>
-                    <source srcset="images/logotext.webp" type="image/webp">
-                    <img class="logoimgtext" src="img/logotext.png" alt="Logo Text">
-                </picture>              
+                <img class="logoimg" src="images/aarohalogofin.webp" alt="Aaroha Logo">
+                <img class="logoimgtext" src="images/logotext.webp" alt="Logo Text">
             </a>
             <!-- <a href="index.html" class="navbar-brand"> आरोह</a> -->
             <button type="button" class="navbar-toggler" data-toggle="collapse" data-target="#navbarCollapse">
