--- a/causes.html
+++ b/causes.html
@@ -55,14 +55,8 @@
     <div class="navbar navbar-expand-lg bg-dark navbar-dark">
         <div class="container-fluid">
             <a href="index.html">
-                <picture>
-                    <source srcset="images/aarohalogofin.webp" type="image/webp">
-                    <img class="logoimg" src="images/aarohalogofin.png" alt="Aaroha Logo">
-                </picture>
-                <picture>
-                    <source srcset="images/logotext.webp" type="image/webp">
-                    <img class="logoimgtext" src="img/logotext.png" alt="Logo Text">
-                </picture>
+                <img class="logoimg" src="images/aarohalogofin.webp" alt="Aaroha Logo">
+                <img class="logoimgtext" src="images/logotext.webp" alt="Logo Text">
             </a><!-- <a href="index.html" class="navbar-brand"> आरोह</a> -->
             <button type="button" class="navbar-toggler" data-toggle="collapse" data-target="#navbarCollapse">
                 <span class="navbar-toggler-icon"></span>
@@ -200,10 +194,7 @@
                 <div class="owl-carousel causes-carousel">
                     <div class="causes-item">
                         <div class="causes-img">
-                            <picture>
-                                <source srcset="images\_MG_6221.webp" type="image/webp">
-                                <img src="images\_MG_6221.JPG" alt="Image">
-                            </picture>
+                            <img src="images\_MG_6221.webp" alt="Image">
                         </div>
                         <div class="causes-progress">
                             <div class="progress">
@@ -224,7 +215,7 @@
                     </div>
                     <div class="causes-item">
                         <div class="causes-img">
-                            <img src="images\_MG_5953.JPG" alt="Image">
+                            <img src="images\_MG_5953.webp" alt="Image">
                         </div>
                         <div class="causes-progress">
                             <div class="progress">
@@ -247,7 +238,7 @@
                     </div>
                     <div class="causes-item">
                         <div class="causes-img">
-                            <img src="images\_MG_6303.JPG" alt="Image">
+                            <img src="images\_MG_6303.webp" alt="Image">
                         </div>
                         <div class="causes-progress">
                             <div class="progress">
@@ -272,7 +263,7 @@
                     </div>
                     <div class="causes-item">
                         <div class="causes-img">
-                            <img src="images\DVP_0843.JPG" alt="Image">
+                            <img src="images\DVP_0843.webp" alt="Image">
                         </div>
                         <div class="causes-progress">
                             <div class="progress">
