--- a/event.html
+++ b/event.html
@@ -58,14 +58,8 @@
         <div class="navbar navbar-expand-lg bg-dark navbar-dark">
             <div class="container-fluid">
                 <a href="index.html">
-                    <picture>
-                        <source srcset="images/aarohalogofin.webp" type="image/webp">
-                        <img class="logoimg" src="images/aarohalogofin.png" alt="Logo">
-                    </picture>
-                    <picture>
-                        <source srcset="images/logotext.webp" type="image/webp">
-                        <img class="logoimgtext" src="img/logotext.png" alt="Logo Text">
-                    </picture>           
+                    <img class="logoimg" src="images/aarohalogofin.webp" alt="Logo">
+                    <img class="logoimgtext" src="images/logotext.webp" alt="Logo Text">
                 </a><!-- <a href="index.html" class="navbar-brand"> आरोह</a> -->
                 <button type="button" class="navbar-toggler" data-toggle="collapse" data-target="#navbarCollapse">
                     <span class="navbar-toggler-icon"></span>
@@ -132,10 +126,7 @@
                 <div class="row">
                     <div class="col-lg-6">
                         <div class="event-item">
-                            <picture>
-                                <source srcset="images/event-1.webp" type="image/webp">
-                                <img src="img/event-1.jpg" alt="Image">
-                            </picture>
+                            <img src="images/event-1.webp" alt="Image">
                             <div class="event-content">
                                 <!-- <div class="event-meta">
                                     <p><i class="fa fa-calendar-alt"></i>Every Week</p>
@@ -154,10 +145,7 @@ Mission: Aaroha envisions ‘A se Ah’ as a means to dispel the sense of inadeq
                     </div>
                     <div class="col-lg-6">
                         <div class="event-item">
-                            <picture>
-                                <source srcset="images/aakar.webp" type="image/webp">
-                                <img src="img/aakar.jpg" alt="Image">
-                            </picture>
+                            <img src="images/aakar.webp" alt="Image">
                             <div class="event-content">
                                 <!-- <div class="event-meta">
                                     <p><i class="fa fa-calendar-alt"></i>01-Jan-45</p>
@@ -178,10 +166,7 @@ Mission: Aaroha envisions ‘A se Ah’ as a means to dispel the sense of inadeq
                     </div>
                     <div class="col-lg-6">
                         <div class="event-item">
-                            <picture>
-                                <source srcset="images/aavishkar.webp" type="image/webp">
-                                <img src="img/aavishkar.jpg" alt="Image">
-                            </picture>
+                            <img src="images/aavishkar.webp" alt="Image">
                             <div class="event-content">
                                 <!-- <div class="event-meta">
                                     <p><i class="fa fa-calendar-alt"></i>01-Jan-45</p>
@@ -203,10 +188,7 @@ Mission: Aaroha envisions ‘A se Ah’ as a means to dispel the sense of inadeq
                    
                     <div class="col-lg-6">
                         <div class="event-item">
-                            <picture>
-                                <source srcset="images/fund raising.webp" type="image/webp">
-                                <img src="img/fund raising.jpg" alt="Image">
-                            </picture>
+                            <img src="images/fund raising.webp" alt="Image">
                             <div class="event-content">
                                 <!-- <div class="event-meta">
                                     <p><i class="fa fa-calendar-alt"></i>Every Week</p>
@@ -229,10 +211,7 @@ The mission of these fundraising events is to expand the reach and impact of Aar
                     </div>
                     <div class="col-lg-6">
                         <div class="event-item">
-                            <picture>
-                                <source srcset="images/aasha.webp" type="image/webp">
-                                <img src="img/aasha.jpg" alt="Image">
-                            </picture>
+                            <img src="images/aasha.webp" alt="Image">
                             <div class="event-content">
                                 <!-- <div class="event-meta">
                                     <p><i class="fa fa-calendar-alt"></i>Every Week</p>
@@ -255,10 +234,7 @@ The mission of these fundraising events is to expand the reach and impact of Aar
                     </div>
                     <div class="col-lg-6">
                         <div class="event-item">
-                            <picture>
-                                <source srcset="images/unmilnam.webp" type="image/webp">
-                                <img src="img/unmilnam.jpg" alt="Image">
-                            </picture>
+                            <img src="images/unmilnam.webp" alt="Image">
                             <div class="event-content">
                                 <!-- <div class="event-meta">
                                     <p><i class="fa fa-calendar-alt"></i>Every Week</p>
@@ -281,10 +257,7 @@ The mission of these fundraising events is to expand the reach and impact of Aar
                     </div>
                     <div class="col-lg-6">
                         <div class="event-item">
-                            <picture>
-                                <source srcset="images/alankaran.webp" type="image/webp">
-                                <img src="img/alankaran.jpg" alt="Image">
-                            </picture>
+                            <img src="images/alankaran.webp" alt="Image">
                             <div class="event-content">
                                 <!-- <div class="event-meta">
                                     <p><i class="fa fa-calendar-alt"></i>01-Jan-45</p>
