--- a/index.html
+++ b/index.html
@@ -56,14 +56,8 @@
         <div class="navbar navbar-expand-lg bg-dark navbar-dark">
             <div class="container-fluid">
                 <!-- <a href="index.html"> -->
-                    <picture>
-                        <source type="image/webp" srcset="images/aarohalogofin.webp">
-                        <img class="logoimg" src="images/aarohalogofin.png" alt="Aaroha Logo">
-                    </picture>
-                    <picture>
-                        <source type="image/webp" srcset="images/logotext.webp">
-                        <img class="logoimgtext" src="img/logotext.png">                
-                    </picture>
+                        <img class="logoimg" src="images/aarohalogofin.webp" alt="Aaroha Logo">
+                        <img class="logoimgtext" src="images/logotext.webp">                
                 <!-- </a> -->
                 <!-- <a href="index.html" class="navbar-brand"> आरोह</a> -->
                 <button type="button" class="navbar-toggler" data-toggle="collapse" data-target="#navbarCollapse">
@@ -110,10 +104,7 @@
                 <div class="owl-carousel">
                     <div class="carousel-item">
                         <div class="carousel-img">
-                            <picture>
-                                <source type="image/webp" srcset="images/DVP_0181.webp">
-                                <img src="images/DVP_0181.png" alt="Image">
-                            </picture>
+                            <img src="images/DVP_0181.webp" alt="Image">
                         </div>
                         <div class="carousel-text">
                             <h1>Let's be kind for children</h1>
@@ -126,10 +117,7 @@
                     </div>
                     <div class="carousel-item">
                         <div class="carousel-img">
-                            <picture>
-                                <source type="image/webp" srcset="images/IMG_5874.webp">
-                                <img src="images/IMG_5874.JPG" alt="Image">
-                            </picture>
+                            <img src="images/IMG_5874.webp" alt="Image">
                         </div>
                         <div class="carousel-text">
                             <h1>Get Involved with helping hand</h1>
@@ -142,10 +130,7 @@
                     </div>
                     <div class="carousel-item">
                         <div class="carousel-img">
-                            <picture>
-                                <source type="image/webp" srcset="images/_MG_5953.webp">
-                                <img src="images/_MG_5953.JPG" alt="Image">
-                            </picture>
+                            <img src="images/_MG_5953.webp" alt="Image">
                         </div>
                         <div class="carousel-text">
                             <h1>Bringing smiles to thousands</h1>
@@ -350,10 +335,7 @@ Apart from education, Aaroha also works towards improving the health and wellbei
                 <div class="owl-carousel causes-carousel">
                     <div class="causes-item">
                         <div class="causes-img">
-                            <picture>
-                                <source srcset="images/_MG_6221.webp" type="image/webp">
-                                <img src="images/_MG_6221.JPG" alt="Image">
-                            </picture>
+                            <img src="images/_MG_6221.webp" alt="Image">
                         </div>
                         <div class="causes-progress">
                             <div class="progress">
@@ -374,10 +356,7 @@ Apart from education, Aaroha also works towards improving the health and wellbei
                     </div>
                     <div class="causes-item">
                         <div class="causes-img">
-                            <picture>
-                                <source type="image/webp" srcset="images/_MG_5953.webp">
-                                <img src="images/_MG_5953.JPG" alt="Image">
-                            </picture>
+                            <img src="images/_MG_5953.webp" type="image/webp" alt="Image">
                         </div>
                         <div class="causes-progress">
                             <div class="progress">
@@ -400,10 +379,7 @@ Apart from education, Aaroha also works towards improving the health and wellbei
                     </div>
                     <div class="causes-item">
                         <div class="causes-img">
-                            <picture>
-                                <source type="image/webp" srcset="images/_MG_6303.webp">
-                                <img src="images/_MG_6303.JPG" alt="Image">
-                            </picture>
+                            <img src="images/_MG_6303.webp" alt="Image">
                         </div>
                         <div class="causes-progress">
                             <div class="progress">
@@ -428,10 +404,7 @@ Apart from education, Aaroha also works towards improving the health and wellbei
                     </div>
                     <div class="causes-item">
                         <div class="causes-img">
-                            <picture>
-                                <source type="image/webp" srcset="images/DVP_0843.webp">
-                                <img src="images/DVP_0843.JPG" alt="Image">
-                            </picture>
+                            <img src="images/DVP_0843.webp" alt="Image">
                         </div>
                         <div class="causes-progress">
                             <div class="progress">
@@ -517,10 +490,7 @@ Apart from education, Aaroha also works towards improving the health and wellbei
                     <h2>Contact for any query</h2>
                 </div>
                 <div class="contact-img">
-                    <picture>
-                        <source type="image/webp" srcset="images/DSC_0086.webp">
-                        <img src="images/DSC_0086.JPG" alt="Image">
-                    </picture>
+                    <img src="images/DSC_0086.webp" alt="Image">
                 </div>
                 <div class="contact-form">
                         <div id="success"></div>
