--- a/single.html
+++ b/single.html
@@ -55,18 +55,8 @@
     <div class="navbar navbar-expand-lg bg-dark navbar-dark">
         <div class="container-fluid">
             <a href="index.html">
-                <picture>
-                    <source srcset="images/aarohalogofin.webp" type="image/webp">
-                    <img class="logoimg" src="images/aarohalogofin.png" alt="Aaroha Logo">
-
-                </picture>
-
-                <picture>
-
-                    <source srcset="images/logotext.webp" type="image/webp">
-                    <img class="logoimgtext" src="img/logotext.png" alt="Logo Text">
-
-                </picture>
+                <img class="logoimg" src="images/aarohalogofin.webp" type="image/webp" alt="Aaroha Logo">
+                <img class="logoimgtext" src="images/logotext.webp" type="image/webp" alt="Logo Text">
             </a><!-- <a href="index.html" class="navbar-brand"> आरोह</a> -->
             <button type="button" class="navbar-toggler" data-toggle="collapse" data-target="#navbarCollapse">
                 <span class="navbar-toggler-icon"></span>
@@ -129,10 +119,7 @@
                 <div class="row">
                     <div class="col-lg-8">
                         <div class="single-content">
-                            <picture>
-                                <source srcset="img/akshar2.webp" type="image/webp">
-                                <img src="img/akshar2.jpg" />
-                            </picture>
+                            <img src="img/akshar2.webp" type="image/webp" alt="Project Akshar Image">
                             <h2>Project Akshar</h2>
                             <p>
                                 " A simple but powerful reminder of the positive domino effect a good education can have on many aspects of a person's life and outlook."
