--- a/single1.html
+++ b/single1.html
@@ -58,19 +58,9 @@
     <div class="navbar navbar-expand-lg bg-dark navbar-dark">
         <div class="container-fluid">
             <a href="index.html">
-                <picture>
-                    <source srcset="images/aarohalogofin.webp" type="image/webp">
-                    <img class="logoimg" src="images/aarohalogofin.png" alt="Aaroha Logo">
-
-                </picture>
-
-                <picture>
-
-                    <source srcset="images/logotext.webp" type="image/webp">
-                    <img class="logoimgtext" src="img/logotext.png" alt="Logo Text">
-
-                </picture>                
-            </a><!-- <a href="index.html" class="navbar-brand"> आरोह</a> -->
+                <img class="logoimg" src="images/aarohalogofin.webp" alt="Aaroha Logo">
+                <img class="logoimgtext" src="img/logotext.webp" alt="Logo Text">
+            </a>
             <button type="button" class="navbar-toggler" data-toggle="collapse" data-target="#navbarCollapse">
                 <span class="navbar-toggler-icon"></span>
             </button>
@@ -132,10 +122,7 @@
             <div class="row">
                 <div class="col-lg-8">
                     <div class="single-content">
-                        <picture>
-                            <source srcset="img/aavishkar.webp" type="image/webp">
-                            <img src="img/aavishkar.jpg" />
-                        </picture>
+                        <img src="img/aavishkar.webp" />
                         <h2>Project Anand</h2>
                         <p>
                             The word “aanand” directly translates to “joy”. And going by a famous quote by Joseph
