--- a/team.html
+++ b/team.html
@@ -55,18 +55,8 @@
     <div class="navbar navbar-expand-lg bg-dark navbar-dark">
         <div class="container-fluid">
             <a href="index.html">
-                <picture>
-                    <source srcset="images/aarohalogofin.webp" type="image/webp">
-                    <img class="logoimg" src="images/aarohalogofin.png" alt="Aaroha Logo">
-
-                </picture>
-
-                <picture>
-
-                    <source srcset="images/logotext.webp" type="image/webp">
-                    <img class="logoimgtext" src="img/logotext.png" alt="Logo Text">
-
-                </picture>               
+                <img class="logoimg" src="images/aarohalogofin.webp" type="image/webp" alt="Aaroha Logo">
+                <img class="logoimgtext" src="images/logotext.webp" type="image/webp" alt="Logo Text">
             </a><!-- <a href="index.html" class="navbar-brand"> आरोह</a> -->
             <button type="button" class="navbar-toggler" data-toggle="collapse" data-target="#navbarCollapse">
                 <span class="navbar-toggler-icon"></span>
@@ -134,10 +124,7 @@
                     <div class="col-lg-3 col-md-6">
                         <div class="team-item">
                             <div class="team-img">
-                                <picture>
-                                    <source srcset="teamimgs/president.webp" type="image/webp">
-                                    <img src="teamimgs/president.jpg" alt="Team Image">
-                                </picture>
+                                <img src="teamimgs/president.webp" type="image/webp" alt="Team Image">
                             </div>
                             <div class="team-text">
                                 <h2>Shreenivas</h2>
@@ -156,10 +143,7 @@
                     <div class="col-lg-3 col-md-6">
                         <div class="team-item">
                             <div class="team-img">
-                                <picture>
-                                    <source srcset="teamimgs/vicepresident.webp" type="image/webp">
-                                    <img src="teamimgs/vicepresident.jpg" alt="Team Image">
-                                </picture>
+                                <img src="teamimgs/vicepresident.webp" type="image/webp" alt="Team Image">
                             </div>
                             <div class="team-text">
                                 <h2>Ashish Sharma</h2>
@@ -176,10 +160,7 @@
                     <div class="col-lg-3 col-md-6">
                         <div class="team-item">
                             <div class="team-img">
-                                <picture>
-                                    <source srcset="teamimgs/projectmanager.webp" type="image/webp">
-                                    <img src="teamimgs/projectmanager.jpg" alt="Team Image">
-                                </picture>
+                                <img src="teamimgs/projectmanager.webp" type="image/webp" alt="Team Image">
                             </div>
                             <div class="team-text">
                                 <h2>Triveni Naidu</h2>
@@ -196,10 +177,7 @@
                     <div class="col-lg-3 col-md-6">
                         <div class="team-item">
                             <div class="team-img">
-                                <picture>
-                                    <source srcset="teamimgs/humanlead.webp" type="image/webp">
-                                    <img src="teamimgs/humanlead.jpg" alt="Team Image">
-                                </picture>
+                                <img src="teamimgs/humanlead.webp" type="image/webp" alt="Team Image">
                             </div>
                             <div class="team-text">
                                 <h2>Satvik Sharma</h2>
@@ -216,10 +194,7 @@
                     <div class="col-lg-3 col-md-6">
                         <div class="team-item">
                             <div class="team-img">
-                                <picture>
-                                    <source srcset="teamimgs/financemanager.webp" type="image/webp">
-                                    <img src="teamimgs/financemanager.jpg" alt="Team Image">
-                                </picture>
+                                <img src="teamimgs/financemanager.webp" type="image/webp" alt="Team Image">
                             </div>
                             <div class="team-text">
                                 <h2>Surbhi Gaharwar</h2>
@@ -236,10 +211,7 @@
                     <div class="col-lg-3 col-md-6">
                         <div class="team-item">
                             <div class="team-img">
-                                <picture>
-                                    <source srcset="teamimgs/chaptercoordinator.webp" type="image/webp">
-                                    <img src="teamimgs/chaptercoordinator.jpg" alt="Team Image">
-                                </picture>
+                                <img src="teamimgs/chaptercoordinator.webp" type="image/webp" alt="Team Image">
                             </div>
                             <div class="team-text">
                                 <h2>Satyam Vada</h2>
@@ -256,10 +228,7 @@
                     <div class="col-lg-3 col-md-6">
                         <div class="team-item">
                             <div class="team-img">
-                                <picture>
-                                    <source srcset="teamimgs/designlead.webp" type="image/webp">
-                                    <img src="teamimgs/designlead.jpg" alt="Team Image">
-                                </picture>
+                                <img src="teamimgs/designlead.webp" type="image/webp" alt="Team Image">
                             </div>
                             <div class="team-text">
                                 <h2>Shruti Saksena</h2>
@@ -303,10 +272,7 @@
                     <div class="col-lg-3 col-md-6">
                         <div class="team-item">
                             <div class="team-img">
-                                <picture>
-                                    <source srcset="images/aimmslead.webp" type="image/webp">
-                                    <img src="images/aimmslead.jpg" alt="Team Image">
-                                </picture>
+                                <img src="images/aimmslead.webp" type="image/webp" alt="Team Image">
                             </div>
                             <div class="team-text">
                                 <h2>Simaran</h2>
@@ -323,10 +289,7 @@
                     <div class="col-lg-3 col-md-6">
                         <div class="team-item">
                             <div class="team-img">
-                                <picture>
-                                    <source srcset="images/manitlead.webp" type="image/webp">
-                                    <img src="images/manitlead.jpg" alt="Team Image">
-                                </picture>
+                                <img src="images/manitlead.webp" type="image/webp" alt="Team Image">
                             </div>
                             <div class="team-text">
                                 <h2>Kshitij Raj</h2>
@@ -343,10 +306,7 @@
                     <div class="col-lg-3 col-md-6">
                         <div class="team-item">
                             <div class="team-img">
-                                <picture>
-                                    <source srcset="images/ihmlead.webp" type="image/webp">
-                                    <img src="images/ihmlead.jpg" alt="Team Image">
-                                </picture>
+                                <img src="images/ihmlead.webp" type="image/webp" alt="Team Image">
                             </div>
                             <div class="team-text">
                                 <h2>Khusi Shrivastav</h2>
