banner added to download the app

--- a/about.html
+++ b/about.html
@@ -25,7 +25,7 @@
 
     <body>
        <!-- Top Bar Start -->
-       <div class="top-bar d-none d-md-block">
+       <!-- <div class="top-bar d-none d-md-block">
         <div class="container-fluid">
             <div class="row">
                 <div class="col-md-8">
@@ -38,17 +38,25 @@
                 </div>
                 <div class="col-md-4">
                     <div class="top-bar-right">
-                        <div class="social">
-                            <!-- <a href=""><i class="fab fa-twitter"></i></a> -->
-                            <a href="https://www.facebook.com/aaroha.youthorg/"><i class="fab fa-facebook-f"></i></a>
-                            <!-- <a href=""><i class="fab fa-linkedin-in"></i></a> -->
-                            <a href="https://www.instagram.com/aaroha.youthorg/"><i class="fab fa-instagram"></i></a>
+                        <div class="social"> -->
+                            <!-- <a href="https://www.facebook.com/aaroha.youthorg/"><i class="fab fa-facebook-f"></i></a> -->
+                            <!-- <a href="https://www.instagram.com/aaroha.youthorg/"><i class="fab fa-instagram"></i></a>
                         </div>
                     </div>
                 </div>
             </div>
+        </div> -->
+    <!-- </div> -->
+
+    <div class="top-banner">
+        <div class="banner-content">
+          <div class="sliding-text">
+            <!-- <div></div> -->
+            <span>Download Our App Now! Click the button below.</span>
+          </div>
+          <a href="applink\app-release.apk" class="banner-link" target="_blank">Get App</a>
         </div>
-    </div>
+      </div>
     <!-- Top Bar End -->
 
     <!-- Nav Bar Start -->
