--- a/volunteer.html
+++ b/volunteer.html
@@ -25,7 +25,7 @@
 
     <body>
         <!-- Top Bar Start -->
-        <div class="top-bar d-none d-md-block">
+        <!-- <div class="top-bar d-none d-md-block">
             <div class="container-fluid">
                 <div class="row">
                     <div class="col-md-8">
@@ -52,7 +52,17 @@
                     </div>
                 </div>
             </div>
-        </div>
+        </div> -->
+
+        <div class="top-banner">
+            <div class="banner-content">
+              <div class="sliding-text">
+                <!-- <div></div> -->
+                <span>Download Our App Now! Click the button below.</span>
+              </div>
+              <a href="applink\app-release.apk" class="banner-link" target="_blank">Get App</a>
+            </div>
+          </div>
         <!-- Top Bar End -->
 
         <!-- Nav Bar Start -->
